Append usernames to dbus object paths before sanitising the object path.

Usernames can contain characters not valid in a dbus object path, like ‘-’.
It just so happens that this case exposes a bug in the GDBus documentation -
g_dbus_connection_register_object will helpfully return 0 without setting
error, resulting in a crash.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=51031